// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element snapshots should render Element 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t className Element Element--light"
    data-test-box=""
    id="1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; position: absolute; width: 100px;"
  >
    <div
      class="css-wcnq0t className Element__wrapper Element__wrapper--light"
      data-status="false"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
    />
  </div>
</DocumentFragment>
`;

exports[`Element snapshots should render Element when is selected & is multiple moving 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t className Element Element--light Element--moving Element--moving--light"
    data-test-box=""
    id="1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; position: absolute; width: 100px;"
  >
    <div
      class="css-wcnq0t className Element__wrapper Element__wrapper--light"
      data-status="true"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
    >
      <div
        class="css-wcnq0t Outline Outline--light"
        data-test-box=""
        style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
      />
      <div
        class="css-u1i9af"
        data-test-box=""
        style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
      >
        <div
          class="css-wcnq0t"
          data-test-box=""
          style="height: 100px; width: 100px;"
        />
        <svg
          class="Corners Corners--light"
          style="height: 102px; left: -1px; top: -1px; width: 102px;"
        >
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="-3"
            y="-3"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="-3"
            y="97.5"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="97.5"
            y="-3"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="97.5"
            y="97.5"
          />
        </svg>
        <div
          class="TransformArea TransformArea--light"
          style="height: 100px; width: 100px;"
        >
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--east TransformArea__anchor-resize--east--light"
            data-test-anchor-resize="east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--north TransformArea__anchor-resize--north--light"
            data-test-anchor-resize="north"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--northEast TransformArea__anchor-resize--northEast--light"
            data-test-anchor-resize="north-east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--northWest TransformArea__anchor-resize--northWest--light"
            data-test-anchor-resize="north-west"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--south TransformArea__anchor-resize--south--light"
            data-test-anchor-resize="south"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--southEast TransformArea__anchor-resize--southEast--light"
            data-test-anchor-resize="south-east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--southWest TransformArea__anchor-resize--southWest--light"
            data-test-anchor-resize="south-west"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--west TransformArea__anchor-resize--west--light"
            data-test-anchor-resize="west"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--northEast TransformArea__anchor-rotate--northEast--light"
            data-test-anchor-rotate="north-east"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--northWest TransformArea__anchor-rotate--northWest--light"
            data-test-anchor-rotate="north-west"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--southEast TransformArea__anchor-rotate--southEast--light"
            data-test-anchor-rotate="south-east"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--southWest TransformArea__anchor-rotate--southWest--light"
            data-test-anchor-rotate="south-west"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots should render Element when is selected 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t className Element Element--light"
    data-test-box=""
    id="1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; position: absolute; width: 100px;"
  >
    <div
      class="css-wcnq0t className Element__wrapper Element__wrapper--light"
      data-status="true"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
    >
      <div
        class="css-wcnq0t Outline Outline--light"
        data-test-box=""
        style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
      />
      <div
        class="css-u1i9af"
        data-test-box=""
        style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
      >
        <div
          class="css-wcnq0t"
          data-test-box=""
          style="height: 100px; width: 100px;"
        />
        <svg
          class="Corners Corners--light"
          style="height: 102px; left: -1px; top: -1px; width: 102px;"
        >
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="-3"
            y="-3"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="-3"
            y="97.5"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="97.5"
            y="-3"
          />
          <rect
            height="6"
            rx="1.5"
            width="6"
            x="97.5"
            y="97.5"
          />
        </svg>
        <div
          class="TransformArea TransformArea--light"
          style="height: 100px; width: 100px;"
        >
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--east TransformArea__anchor-resize--east--light"
            data-test-anchor-resize="east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--north TransformArea__anchor-resize--north--light"
            data-test-anchor-resize="north"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--northEast TransformArea__anchor-resize--northEast--light"
            data-test-anchor-resize="north-east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--northWest TransformArea__anchor-resize--northWest--light"
            data-test-anchor-resize="north-west"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--south TransformArea__anchor-resize--south--light"
            data-test-anchor-resize="south"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--southEast TransformArea__anchor-resize--southEast--light"
            data-test-anchor-resize="south-east"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--southWest TransformArea__anchor-resize--southWest--light"
            data-test-anchor-resize="south-west"
          />
          <div
            class="TransformArea__anchor-resize TransformArea__anchor-resize--light TransformArea__anchor-resize--west TransformArea__anchor-resize--west--light"
            data-test-anchor-resize="west"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--northEast TransformArea__anchor-rotate--northEast--light"
            data-test-anchor-rotate="north-east"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--northWest TransformArea__anchor-rotate--northWest--light"
            data-test-anchor-rotate="north-west"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--southEast TransformArea__anchor-rotate--southEast--light"
            data-test-anchor-rotate="south-east"
          />
          <div
            class="TransformArea__anchor-rotate TransformArea__anchor-rotate--light TransformArea__anchor-rotate--southWest TransformArea__anchor-rotate--southWest--light"
            data-test-anchor-rotate="south-west"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots should render Element when width & height is auto 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t className Element Element--light"
    data-test-box=""
    id="1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: auto; position: absolute; width: auto;"
  >
    <div
      class="css-wcnq0t className Element__wrapper Element__wrapper--light"
      data-status="false"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
    />
  </div>
</DocumentFragment>
`;
